--- a/CHANGES
+++ b/CHANGES
@@ -15,3 +15,7 @@ https://github.com/chaselgrove/python-unf
 0.3.0 -- 19 April 2017
 
     Added support for booleans and vectors (tuples and lists).
+
+0.4.0 -- 19 April 2017
+
+    Added support for numpy arrays (as vectors).
