--- a/CHANGES
+++ b/CHANGES
@@ -32,3 +32,7 @@ https://github.com/chaselgrove/python-unf
     Requiring tuples and lists to contain only primitives.
 
     Allowing multi-dimensional numpy arrays.
+
+0.5.1 -- 21 April 2017
+
+    Removed debugging print statement.
